...
                    ProgressView("Loading Assets...")
                case .failed(let error):
                    if(isErrorDialogShown){ErrorDialog(errorDes: .constant(error.description) , isShown: $isErrorDialogShown)}
                    Color.black
                case .loaded(let characters):
                    if(characters.isEmpty){
                        Text("No character found")
                    }
                    ForEach(characters){ data in
                        
                        CharacterRow(character: data)
                    }
                }
            }).navigationTitle("Marvel")
            
        }
        
    }
}

...
