...
    var character : Comic
    var body: some View{
        HStack(alignment: .top, spacing: 15){
            WebImage(url: extractImage(data: character.thumbnail)).resizable().aspectRatio(contentMode: /*@START_MENU_TOKEN@*/.fill/*@END_MENU_TOKEN@*/).frame(width: 150, height: 150).cornerRadius(8)
            
            VStack(alignment: .leading, spacing: 8, content: {
                Text(character.title).font(.title3).fontWeight(/*@START_MENU_TOKEN@*/.bold/*@END_MENU_TOKEN@*/).accessibility(identifier: "comic row")
                if let description = character.description {
                    Text(description).font(.caption).foregroundColor(.gray).lineLimit(4).multilineTextAlignment(/*@START_MENU_TOKEN@*/.leading/*@END_MENU_TOKEN@*/)
                }
                ///Links
                HStack(spacing: 10){
                    ForEach(character.urls, id: \.self){
...
